# URL-shortener

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  create_db.py  main_short.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
alembic/: env.py
alembic/versions/: 0001_initial.py
config/: config.py  postgres_adaptor.py  postgres_config.py
gran-url/: Chart.yaml  values.yaml
gran-url/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  postgresql-deployment.yaml  postgresql-service.yaml  service.yaml
gran-url/templates/tests/: test-connection.yaml
src/: middlewares.py
src/database/: base.py  db.py
src/repositories/: short_repo.py
src/routers/: readiness.py  shortener.py
src/services/: shortener.py
tests/: conftest.py
tests/integration/: test_metrics.py  test_readiness.py  test_shortener.py
