[tool.poetry]
name = "shortener"
version = "0.1.3"
description = "URL Shortener for SHIFT course."
authors = ["Andrey <megagran.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
opentracing = "^2.4.0"
prometheus-client = "^0.17.1"
aiohttp = "^3.8.6"
jaeger-client = "^4.8.0"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.18.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
