[tool.poetry]
name = "shortener"
version = "0.1.9"
description = "URL Shortener for SHIFT course."
authors = ["Andrey <megagran.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
opentracing = "^2.4.0"
prometheus-client = "^0.17.1"
aiohttp = "^3.8.6"
jaeger-client = "^4.8.0"
validators = "^0.22.0"
alembic = "^1.12.0"
sqlalchemy = "^2.0.22"
asyncpg = "^0.28.0"
python-multipart = "^0.0.6"


[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.18.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
